K1J-1606: Separated list and delete to send notifications correctly (CS)